# productionVideoAutomatise

./: .env.example  .gitignore  adminNisus1978@@  adminNisus1978@@.pub  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json
apps/api-gateway/: package.json  tsconfig.json
apps/api-gateway/src/: app.module.ts  main.ts
apps/api-gateway/src/config/: env.ts
apps/api-gateway/src/infra/: infra.module.ts  prisma.service.ts  redis.service.ts  s3.service.ts  (+1 more)
apps/orchestrator/: package.json  tsconfig.json
apps/orchestrator/src/: config.ts  index.ts
apps/render-svc/: package.json  remotion.config.ts  tsconfig.json
apps/render-svc/remotion/: Root.tsx  Story.tsx
apps/render-svc/src/: config.ts  main.ts  render.ts  routes.ts
apps/web/: next.config.ts  package.json  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: AssetAudio.tsx  AssetImage.tsx  AssetVideo.tsx  CreateProjectForm.tsx  LiveProject.tsx  ProjectCard.tsx  SceneCard.tsx  StatusBadge.tsx
apps/web/lib/: api.ts  ws.ts
infra/: docker-compose.yml
prisma/: schema.prisma  seed.ts
prisma/migrations/20260509224416_init/: migration.sql
services/music/: pyproject.toml  requirements.txt  start.sh
services/music/music/: config.py  main.py  musicgen.py  routes.py  schemas.py
services/planner/: pyproject.toml  requirements.txt  start.sh
services/planner/planner/: config.py  llm.py  main.py  prompts.py  routes.py  schemas.py
services/voice/: pyproject.toml  requirements.txt  start.sh
services/voice/voice/: config.py  main.py  routes.py  schemas.py  tts.py
(+43 files in other folders)
