[project]
name = "pva-planner"
version = "0.0.1"
description = "Planner microservice — script + storyboard + translate via Ollama"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.34.0",
  "openai>=1.50.0",
  "httpx>=0.28.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.7.0",
  "python-dotenv>=1.0.1",
]

[tool.uv]
package = false
