[project]
name = "pva-voice"
version = "0.0.1"
description = "Voice microservice — text-to-speech via Piper TTS"
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.34.0",
  "piper-tts>=1.2.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.7.0",
  "python-dotenv>=1.0.1",
]

[tool.uv]
package = false
